--- a/source/less/main-catalog.less
+++ b/source/less/main-catalog.less
@@ -112,8 +112,8 @@
     display: block;
   }
 
-  .main__catalog-tablet-image {
-    display: none;
+  .main-catalog__plus-mobile {
+    display: block;
   }
 
   .main-catalog__main-text {
@@ -142,7 +142,7 @@
   }
 
   .main-catalog__good-order--third-image {
-    margin-top: -3px;
+    margin-top: -5px;
   }
 
   .main-catalog__good-data-second {
@@ -164,10 +164,11 @@
     line-height: 60px;
     font-family: "Oswald-Regular", "Arial", sans-serif;
     padding-bottom: 2px;
-    margin-top: 42px;
+    margin-top: 44px;
     margin-left: 28px;
     display: flex;
     margin-bottom: 165px;
+    max-width: 431px;
   }
 
   .main__catalog-image {
@@ -337,7 +338,7 @@
 
   .main-catalog__good {
     background-color: #f2f2f2;
-    margin-bottom: 146px;
+    margin-bottom: 143px;
     padding-bottom: 37px;
     max-width: 245px;
     padding-left: 0;
