--- a/source/less/map.less
+++ b/source/less/map.less
@@ -24,13 +24,14 @@
   .map__iframe {
     border: 0;
     height: 396px;
-    width: 767px;
+    /*width: 767px;*/
+    width: 100%;
     margin-left: -3px;
   }
 
   .map__iframe-form {
     height: 426px;
-    width: 768px;
+    width: 100%;
     margin-left: -20px;
   }
 
