--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -20,8 +20,8 @@
   color: #111111;
 }
 
-.programs__program-link:active {
-  color: #b7b7b7;
+.programs__program-main-content-link:active {
+  opacity: 50%;
 }
 
 .programs__header-program {
@@ -81,6 +81,10 @@
   .programs {
     max-width: 280px;
     margin: 0 auto;
+  }
+
+  .icon-cat-slim {
+    width: 39px;
   }
 
   .programs__program-content {
