--- a/source/less/communicating.less
+++ b/source/less/communicating.less
@@ -52,7 +52,12 @@
   .map__communicating-form {
     max-width: 768px;
     margin-top: 77px;
-    background-color: #ffffff;
+    background-color: #f2f2f2;
+  }
+
+  .map__communicating-index {
+    padding-top: 17px;
+    padding-bottom: 59px;
   }
 
   .map__communicating-main-text {
@@ -63,7 +68,7 @@
   }
 
   .map__communicating-offer-communicating {
-    margin-top: 38px;
+    margin-top: 37px;
     font-size: 20px;
     line-height: 25px;
     margin-left: 37px;
@@ -74,7 +79,6 @@
     text-align: right;
     margin-right: 38px;
     margin-top: 36px;
-    line-height: 19px;
     font-size: 16px;
     line-height: 20px;
     max-width: 185px;
@@ -86,13 +90,22 @@
     margin-top: 20px;
   }
 
+  .map__communicating__address-form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .communicating__address-city--form {
+    margin-top: 20px;
+  }
+
   .communicating__index {
     padding-top: 17px;
     padding-bottom: 57px;
   }
 }
 
-@media (min-width:@desktop) {
+@media (min-width: @desktop) {
   .map__communicating-form {
     position: absolute;
     z-index: 1000;
@@ -110,11 +123,11 @@
     padding-bottom: 59px;
     position: absolute;
     max-width: 570px;
-    background-color: #fff;
+    background-color: #ffffff;
     top: 96px;
     left: 110px;
     padding-right: 3px;
-    margin-top: 0px;
+    margin-top: 0;
   }
 
   .map__communicating-offer-communicating {
@@ -140,7 +153,7 @@
   .map__communicating-address-city {
     justify-content: left;
     text-align: right;
-    margin-left: 0px;
+    margin-left: 0;
     display: flex;
   }
 
@@ -156,8 +169,7 @@
     margin-top: 36px;
   }
 
-.communicating__address-city--form {
-  margin-top: 20px;
-}
-
+  .communicating__address-city--form {
+    margin-top: 20px;
+  }
 }
