--- a/source/less/header-background.less
+++ b/source/less/header-background.less
@@ -2,12 +2,14 @@
 @mobile: 320px;
 @tablet: 768px;
 @desktop: 1220px;
+@desktop-adaptive:1440px;
 @retina-dpi: 144dpi;
 @retina-dppx: 1.5dppx;
+
 @font-face {
   font-family: "fontello";
   src: url("../font/fontello.eot?11710255");
-  src: url("../font/fontello.eot?11710255#iefix") format("embedded-opentype"), url("../font/fontello.woff2?11710255") format("woff2"), url("../font/fontello.woff?11710255") format("woff"), url("../font/fontello.ttf?11710255") format('truetype'), url('../font/fontello.svg?11710255#fontello') format('svg');
+  src: url("../font/fontello.eot?11710255#iefix") format("embedded-opentype"), url("../font/fontello.woff2?11710255") format("woff2"), url("../font/fontello.woff?11710255") format("woff"), url("../font/fontello.ttf?11710255") format("truetype"), url("../font/fontello.svg?11710255#fontello") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -69,12 +71,13 @@
   font-family: "Oswald-Regular", "Arial", sans-serif;
   color: @white;
   font-weight: normal;
-  margin-top: 5px;
+  margin-top: 24px;
+  margin-left: -4px;
   margin-bottom: 302px;
   text-transform: uppercase;
 }
 
-@media (min-width:@mobile) {
+@media (min-width: @mobile) {
   .header-background__mobile-img {
     position: absolute;
     top: 165px;
@@ -100,7 +103,6 @@
       background-image: url("../img/index-background-mobile@2x.jpg");
       background-position: 50% center;
     }
-
   }
 
   .header-background__tablet-img {
@@ -191,6 +193,7 @@
 
   .header-background {
     max-width: 761px;
+    position: relative;
   }
 
   .header-background::after {
@@ -201,10 +204,6 @@
     position: absolute;
     left: 25px;
     top: 241px;
-  }
-
-  .header-background {
-    position: relative;
   }
 
   .check-your-program {
@@ -219,7 +218,7 @@
   }
 }
 
-@media (min-width:@desktop) {
+@media (min-width: @desktop) {
   .header-background__tablet-img {
     display: none;
   }
@@ -240,11 +239,11 @@
   .header-background::after {
     content: "";
     display: block;
-    width: 721px;
-    height: 663px;
+    width: 50%;
+    height: 668px;
     position: absolute;
     top: -16%;
-    right: -110px;
+    right: 0%;
     margin-left: auto;
     background-color: #65a93c;
     background-image: url(../img/index-background-mobile.png);
@@ -252,6 +251,7 @@
     background-position: 210px -17px;
     background-repeat: no-repeat;
     background-size: 593px 700px;
+
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("img/index-background-desktop@2x.jpg");
       background-size: 1338px auto;
@@ -273,8 +273,8 @@
 
   .header-background__main-words {
     margin-left: 79px;
-    margin-bottom: 0px;
-    margin-top: 14px;
+    margin-bottom: 0;
+    margin-top: 17px;
     max-width: 414px;
   }
 
@@ -289,16 +289,11 @@
   }
 
   .check-your-program {
-    margin-bottom: 507px;
     margin-top: 47px;
-    max-width: 246px;
     margin-left: 78px;
     font-size: 20px;
     line-height: 20px;
     padding: 15px 28px 18px 28px;
-  }
-
-  .check-your-program {
     margin-bottom: 248px;
     max-width: 192px;
   }
@@ -318,4 +313,22 @@
     background-color: #5eaa2f;
     color: #8fc46e;
   }
+}
+@media (min-width:@desktop-adaptive) {
+  .header-background::after {
+    content: "";
+    display: block;
+    width: 720px;
+    height: 668px;
+    position: absolute;
+    top: -16%;
+    right: -8.79%;
+    margin-left: auto;
+    background-color: #65a93c;
+    background-image: url(../img/index-background-mobile.png);
+    z-index: -10000;
+    background-position: 210px -17px;
+    background-repeat: no-repeat;
+    background-size: 593px 700px;
+}
 }
