--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -66,14 +66,41 @@
   margin: 0 auto;
 }
 
+.page-header__logo-menu-image--close {
+  background-image: url(../img/icon-close.svg);
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  width: 20px;
+  height: 20px;
+}
+
+.page-header__logo-menu-image--open {
+  background-image:url("../img/mobile-menu.png");
+  background-color: #fff;
+  background-repeat: no-repeat;
+  width: 24px;
+  height: 18px;
+  background-size: cover;
+  }
+
 .header-background {
   max-width: 320px;
   margin: 0 auto;
 }
 
 @media (min-width: @mobile) {
-  .page-header__logo-site-image-mobile {
+  .page-header__menu-main--hidden {
+    display: none;
+  }
+
+  .page-header__logo-menu-image--close {
     display: block;
+  }
+
+  .page-header__logo-menu-image--active {
+    background-image:url("../img/icon-fb.svg");
+    background-size: cover;
   }
 
   .page-header__menu-main-sub-menu-elem-link--index:hover {
@@ -99,7 +126,7 @@
   .page-header__menu-logos-links {
     background-color: #ffffff;
     padding-top: 11px;
-    padding-bottom: 17px;
+    padding-bottom: 13px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -108,12 +135,12 @@
   }
 
   .page-header__logo-mobile-page {
-    margin-top: 13px;
-    margin-left: -7px;
+    margin-top: 10px;
+    margin-left: -11px;
   }
 
   .page-header__logo-mobile_menu {
-    margin-top: 8px;
+    margin-top: 2px;
   }
 
   .page-header__menu-main-sub-menu-elem {
@@ -128,6 +155,10 @@
   .page-header {
     max-width: 708px;
     margin: 0 auto;
+  }
+
+  .page-header__menu-main--hidden {
+    display: block;
   }
 
   .page-header__menu-main-sub-menu-elem-link--form {
@@ -161,12 +192,16 @@
 
   .page-header__menu-main-sub {
     display: flex;
+    flex-wrap: wrap;
+    max-width: 440px;
+    justify-content: flex-start;
   }
 
   .page-header__menu-main-sub-menu-elem {
     border: 0;
     margin-right: 34px;
     padding-top: 18px;
+    max-width: 161px;
   }
 
   .page-header__menu-main-sub-menu-elem-link {
@@ -174,6 +209,7 @@
     font-family: "Oswald-Regular", "Arial", sans-serif;
     font-size: 18px;
     line-height: 24.86px;
+    word-break: break-all;
   }
 
   .page-header__menu-logos-links {
@@ -184,11 +220,6 @@
   .page-header__menu-main-sub-menu-elem:last-child {
     margin-right: 0;
     border: 0;
-  }
-
-  .page-header__menu-main-sub-menu-elem-li--active {
-    border-bottom: 1px solid #68b738;
-    padding-bottom: 6px;
   }
 
   .page-header__menu-main-sub-menu-elem-link--active {
@@ -203,6 +234,50 @@
   .page-header__menu-main-sub-menu-elem-link--index:active {
     color: #b7b7b7;
   }
+
+
+  .page-header__menu-main-sub-menu-elem-li--catalog-active {
+    position: relative;
+  }
+
+  .page-header__menu-main-sub-menu-elem-li--catalog-active:after {
+   content: "";
+   width: 100%;
+   position: absolute;
+   height: 2px;
+   bottom: 10px;
+   left: 0;
+   background-color: #68b738;
+  }
+
+  .page-header__form--li-active {
+   position: relative;
+  }
+
+  .page-header__form--li-active:after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    height: 2px;
+    bottom: 10px;
+    left: 0;
+    background-color: #68b738;
+   }
+
+   .page-header__menu-main-sub-menu-elem-li--active {
+    position: relative;
+  }
+
+  .page-header__menu-main-sub-menu-elem-li--active:after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    height: 2px;
+    bottom: 10px;
+    left: 0;
+    background-color: #68b738;
+  }
+
 }
 
 @media (min-width: @desktop) {
